--- a/Desafio Web/Desafio.html
+++ b/Desafio Web/Desafio.html
@@ -15,10 +15,11 @@
 </head>
 
 <!--O conteúdo que será exibido aos usuários estão contidos e subdivididos dentro do "body"-->
+
 <body class="bg-dark text-light">
     <section class="section1">
         <header class="mybackground">
-            <img id="inicio1" class="img1" border="0" src="./Racionais head2.png" /> 
+            <img id="inicio1" class="img1" border="0" src="./Racionais head2.png" />
 
             <!--Aqui foi definido a parte superior da página. O primeiro conteúdo a ser exibido-->
         </header>
@@ -49,7 +50,7 @@
         <section class="sobre">
             <h2 class="sobreh2">História e carreira</h2>
             <h3 class="sobreh3">Tragetória do maior grupo de Rap brasileiro</h3>
-            <img src="racionais inicio.png" />
+            <img src="Captura de tela .png" />
             <p>Nascido no final da década de 1980, o nome do grupo foi inspirado no disco Tim Maia Racional de Tim Maia.
                 A primeira gravação do grupo foi feita em 1988, quando o selo Zimbabwe Records lançou a coletânea
                 <em>Consciência Black, Vol. I</em>. Neste LP, apareceram os dois primeiros sucessos do grupo:
@@ -145,7 +146,6 @@
         <section class="section3">
             <h2>Conquistas</h2>
             <h3>Premiações do Racionais Mc's</h3>
-            <img src="./conquistas.jpg" />
             <p>
             <table border="1">
                 <!--O uso, aqui, do recurso "table" tem como objetivo trazer informações rápidas e objetivas a respeito do assunto nela inserido-->
@@ -191,11 +191,50 @@
                 </tr>
             </table>
             </p>
+
+          <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="/Desafio Web/album1.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="/Desafio Web/album2.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="/Desafio Web/album3.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
         </section>
         <section class="section4">
             <h2>Curiosidades</h2>
             <h3>Fatos surpreendentes sobre Racionais Mc's</h3>
-            <img src="./curiosidades.jpg" />
+
             <p>
             <ul>
                 <lI>
@@ -242,11 +281,27 @@
     <footer class="footer">
         <!--No container "footer", tem-se informações sobre a criação da página e seu autor. Este é o ultimo conteúdo a ser exibido ao usuário, porém não está diretamente relacionado aos assuntos principais.Assim, essas informações estão localizadas no rodapé da página-->
         <section>
-            <p>Kamizane</p>
+            <h6>Sobre</h6>
+            <p>Esta página tem como finalidade colocar em prática todo o conhecimento adquirido nas trilhas de Interface e Programação Web. - "Se for para começar, que seja com Racionai's"</p></p>
             <p>Júlio César de Souza Oliveira - PDITA:142</p>
-            <p>
-                Esta página foi modificada pela última vez em 19 de Fevereiro de 2024.
-            </p>
+            <div class="col-xs-6 col-md-3">
+                <h6>Contatos</h6>
+                <ul class="footer-links">
+                  <li><a href="https://github.com/kamizane">GitHub</a></li>
+                  <li><a href="https://www.instagram.com/julio__kami/">Instagram</a></li>
+                  <!---<li><a href="http://scanfcode.com/contribute-at-scanfcode/">Contribute</a></li>
+                  <li><a href="http://scanfcode.com/privacy-policy/">Privacy Policy</a></li>
+                  <li><a href="http://scanfcode.com/sitemap/">Sitemap</a></li>--->
+                </ul>
+              </div>
+            </div>
+            <hr>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-md-8 col-sm-6 col-xs-12">
+              </div>
+            <p class="text-center">Essa página foi criada por Kamizane - © 2024.</p>
         </section>
     </footer>
 
