--- a/Desafio Web/Desafio.html
+++ b/Desafio Web/Desafio.html
@@ -17,10 +17,10 @@
 
 <!--O conteúdo que será exibido aos usuários estão contidos e subdivididos dentro do "body"-->
 
-<body class="bg-dark text-light" data-bs-theme="light">
+<body class="bg-dark text-light">
     <section class="section1">
         <header class="mybackground">
-            <img id="inicio1" class="img1" border="0" src="./Racionais head2.png" />
+            <img id="inicio1" class="img1" border="0" src="./Racionais head2.png" alt="foto do grupo Racionais Mc's"/>
 
             <!--Aqui foi definido a parte superior da página. O primeiro conteúdo a ser exibido-->
         </header>
@@ -33,7 +33,7 @@
         </section>
         <section class="section2">
             <h2>Quem é Racionais Mc's</h2>
-            <img src="./Racionais.jpg" />
+            <img src="./Racionais.jpg" alt="Foto do grupo Racionais Mc's"/>
             <p>
                 Racionais MC's é um grupo brasileiro de rap fundado em 1988. É formado por Mano Brown, Ice Blue, Edi
                 Rock e KL Jay. É o maior grupo de rap do Brasil, e está entre os grupos musicais mais influentes do
@@ -205,18 +205,18 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="/Desafio Web/album2.jpg" class="d-block w-100" alt="...">
+                        <img src="/Desafio Web/album2.jpg" class="d-block w-100" alt="Foto do álbum 'Sobrevivendo no inferno'">
                         <div class="carousel-caption d-none d-md-block">
 
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="/Desafio Web/curiosidades.jpg" class="d-block w-100" alt="...">
+                        <img src="/Desafio Web/curiosidades.jpg" class="d-block w-100" alt="Foto do Documentário do Racionais Mc's ">
                         <div class="carousel-caption d-none d-md-block">
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="/Desafio Web/album3.jpg" class="d-block w-100" alt="...">
+                        <img src="/Desafio Web/album3.jpg" class="d-block w-100" alt="Foto de todos os albuns do grupo">
                         <div class="carousel-caption d-none d-md-block">
                         </div>
                     </div>
